--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ 
   &::before {
     content: "";
     position: absolute;
@@ -27,6 +28,10 @@ body {
   }
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .containerInicioSesion {
   display: flex;
   justify-content: center;
